<resources>
    <string name="login_in_progress">Logging in…</string>
    <string name="app_name" translatable="false">Tiny Tiny RSS</string>
    <string name="login_need_configure">Please configure the application first.</string>
    <string name="login_ready">Ready to login.</string>
    <string name="login_login">Log in</string>
    <string name="login">Login</string>
    <string name="debugging">Debugging</string>
    <string name="password">Password</string>
    <string name="default_url">http://example.domain/tt-rss/</string>
    <string name="look_and_feel">Interface</string>
    <string name="pref_theme">Theme</string>
    <string name="ttrss_url">Tiny Tiny RSS URL</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="preferences">Settings</string>
    <string name="connection">Connection</string>
    <string name="http_authentication">HTTP Authentication</string>
    <string name="loading_message">Loading, please wait…</string>
    <string name="unread_only">Unread only</string>
    <string name="share_article">Share article</string>
    <string name="catchup">Mark read</string>
    <string name="sort_feeds_by_unread">Sort feeds by unread count</string>
    <string name="ssl_trust_any">Accept any certificate</string>
    <string name="category_browse_feeds">Browse feeds</string>
    <string name="blank"></string>
    <string name="transport_debugging">Log sent and received data</string>
    <string name="article_toggle_marked">(Un)Star</string>
    <string name="article_toggle_unread">(Un)Read</string>
    <string name="article_toggle_published">(Un)Publish</string>
    <string name="headlines_select">Select articles</string>
    <string name="headlines_select_dialog">Select articles</string>
    <string name="headlines_select_all">Select all</string>
    <string name="headlines_select_unread">Unread</string>
    <string name="headlines_select_none">Deselect all</string>
    <string name="selection_toggle_marked">(Un)Star</string>
    <string name="selection_toggle_published">(Un)Publish</string>
    <string name="selection_toggle_unread">(Un)Read</string>
    <string name="context_selection_toggle_unread">(Un)Read</string>
    <string name="article_mark_read_above">Mark above read</string>
    <string name="http_login_summary">Optional. Fill this if your tt-rss installation is protected by HTTP Basic authentication</string>
    <string name="login_summary">Not needed for single user mode</string>
    <string name="ttrss_url_summary">https://example.com/tt-rss</string>
    <string name="enable_cats">Enable feed categories</string>
    <string name="no_caption_to_display">No caption to display</string>
    <string name="browse_cats_like_feeds">Browse categories like feeds</string>
    <string name="browse_cats_like_feeds_summary">Use category context menu to override this setting</string>
    <string name="headlines_mark_as_read">Mark read</string>
    <string name="error_unknown">Error: Unknown error (see log)</string>
    <string name="error_http_unauthorized">Error: 401 unauthorized</string>
    <string name="error_http_forbidden">Error: 403 forbidden</string>
    <string name="error_http_not_found">Error: 404 not found</string>
    <string name="error_http_server_error">Error: 500 server error</string>
    <string name="error_http_other_error">Error: other HTTP error (see log)</string>
    <string name="error_ssl_rejected">Error: SSL certificate rejected</string>
    <string name="error_parse_error">Error: JSON parse failed</string>
    <string name="error_io_error">Error: I/O failure (server down?)</string>
    <string name="error_other_error">Error: unknown error (see log)</string>
    <string name="error_api_disabled">Error: enable API access in tt-rss settings</string>
    <string name="error_api_unknown">Error: unknown API error (see log)</string>
    <string name="error_api_incorrect_usage">Error: incorrect API usage</string>
    <string name="error_login_failed">Error: username or password incorrect</string>
    <string name="error_invalid_api_url">Error: invalid API URL</string>
    <string name="go_offline">Go offline</string>
    <string name="go_online">Go online</string>
    <string name="offline_switch_failed">Failed to prepare offline mode</string>
    <string name="dialog_offline_prompt">Login failed, but you have stored offline data. Would you like to go offline?</string>
    <string name="dialog_offline_success">Offline mode is ready</string>
    <string name="dialog_offline_go">Go offline</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_offline_switch_prompt">Download unread articles and go offline?</string>
    <string name="notify_downloading_articles">Downloading articles (%1$d)…</string>
    <string name="notify_downloading_init">Starting download…</string>
    <string name="notify_downloading_feeds">Downloading feeds…</string>
    <string name="notify_downloading_categories">Downloading categories…</string>
    <string name="notify_uploading_sending_data">Sending data to server…</string>
    <string name="notify_downloading_title">Preparing offline mode</string>
    <string name="notify_uploading_title">Synchronizing offline data</string>
    <string name="offline_sync_success">Finished synchronizing your offline data</string>
    <string name="offline_mode">Offline mode</string>
    <string name="offline_media_cache_enabled">Cache media</string>
    <string name="offline_media_cache_enabled_summary">Download media files to sdcard. This might significantly increase time it takes to go offline</string>
    <string name="notify_downloading_images">Downloading images (%1$d)…</string>
    <string name="notify_downloading_media">Downloading media files…</string>
    <string name="article_set_labels">Set labels</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="pref_font_size">Text size</string>
    <string name="dialog_close">Close</string>
    <string name="article_link_copy">Copy link to clipboard</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="attachments_prompt">Select attachment</string>
    <string name="attachment_view">View</string>
    <string name="attachment_copy">Copy URL</string>
    <string name="justify_article_text">Justify article text</string>
    <string name="dialog_offline_sync_in_progress">Offline sync in progress</string>
    <string name="dialog_offline_sync_stop">Stop syncing</string>
    <string name="dialog_offline_sync_continue">Continue</string>
    <string name="article_edit_note">Edit note</string>
    <string name="dialog_open_preferences">Settings</string>
    <string name="dialog_need_configure_prompt">Please fill in your tt-rss server information such as URL, login, and password.</string>
    <string name="error_network_unavailable">Error: network unavailable</string>
    <string name="category_browse_headlines">Browse headlines</string>
    <string name="use_volume_keys">Use volume buttons</string>
    <string name="use_volume_keys_long">Switch between articles with hardware volume buttons</string>
    <string name="ssl_trust_any_host">No hostname verification</string>
    <string name="error_api_unknown_method">Error: unknown API method</string>
    <string name="ssl_trust_any_long">Accepts any SSL certificate without validation</string>
    <string name="ssl_trust_any_host_long">Do not verify server hostname</string>
    <string name="ssl">SSL</string>
    <string name="error_ssl_hostname_rejected">Error: SSL hostname not verified</string>
    <plurals name="article_comments">
        <item quantity="one">%1$d comment</item>
        <item quantity="other">%1$d comments</item>
    </plurals>
    <plurals name="trial_mode_prompt">
        <item quantity="one">Trial mode, only one day left.</item>
        <item quantity="other">Trial mode, %1$d days left.</item>
    </plurals>
    <string name="trial_purchase">Unlock full version</string>
    <string name="trial_expired">Trial expired</string>
    <string name="trial_expired_message">To continue using Tiny Tiny RSS please unlock the full version by purchasing the key.</string>
    <string name="theme_amber">Amber</string>
    <string name="reading">Reading</string>
    <string name="offline_articles_to_download">Amount of articles to download</string>
    <string name="offline_articles_to_download_long">How many articles to download for offline mode (newest first)</string>
    <string name="pref_headlines_show_content_long">Show content previews in headlines list</string>
    <string name="pref_headlines_show_content">Show content preview</string>
    <string name="api_too_low">This action requires newer version of Tiny Tiny RSS</string>
    <string name="share_url_hint">Article URL</string>
    <string name="share_content_hint">Article Content</string>
    <string name="share_title_hint">Article Title</string>
    <string name="share_share_button">Share</string>
    <string name="share_article_posted">Article posted.</string>
    <string name="subscribe_name">Subscribe with Tiny Tiny RSS</string>
    <string name="feed_url">Feed URL</string>
    <string name="subscribe_to_feed">Subscribe to feed</string>
    <string name="error_while_subscribing">Error while subscribing.</string>
    <string name="category_list_updated">Category list updated</string>
    <string name="subscribed_to_feed">Subscribed to feed</string>
    <string name="error_feed_already_exists_">Error: feed already exists.</string>
    <string name="error_invalid_url">Error: Invalid URL.</string>
    <string name="error_url_is_an_html_page_no_feeds_found">Error: URL is an HTML page, no feeds found.</string>
    <string name="error_could_not_download_url">Error: Could not download URL</string>
    <string name="headlines_view_mode">Set view mode</string>
    <string name="headlines_display_mode">Set display mode</string>
    <string name="headlines_set_view_mode">Set view mode</string>
    <string name="headlines_adaptive">Adaptive</string>
    <string name="headlines_all_articles">All articles</string>
    <string name="headlines_starred">Starred</string>
    <string name="headlines_published">Published</string>
    <string name="headlines_unread">Unread</string>
    <string name="article_media_share">Share</string>
    <string name="article_img_view_caption">View Caption</string>
    <string name="pref_headlines_mark_read_scroll">Mark read on scroll</string>
    <string name="pref_headlines_mark_read_scroll_long">Headlines will be marked read when scrolling past them</string>
    <plurals name="mark_num_headlines_as_read">
        <item quantity="one">Mark %1$d article as read?</item>
        <item quantity="other">Mark %1$d articles as read?</item>
    </plurals>
    <string name="prefs_confirm_headlines_catchup">Confirm mark as read</string>
    <string name="author_formatted">%1$s</string>
    <plurals name="n_unread_articles">
        <item quantity="zero">No unread articles</item>
        <item quantity="one">One unread article</item>
        <item quantity="other">%1$d unread articles</item>
    </plurals>
    <string name="pref_headline_font_size">Text size</string>
    <string name="context_confirm_catchup">Mark all articles in %1$s as read?</string>
    <string name="accel_webview_summary">Disable if you see flicker or visual glitches</string>
    <string name="accel_webview_title">Accelerate web views (3.0+)</string>
    <string name="place_shortcut">Place shortcut</string>
    <string name="shortcut_has_been_placed_on_the_home_screen">Shortcut has been placed on the home screen</string>
    <string name="toggle_sort_order">Toggle oldest first</string>
    <string name="open_with">Open with…</string>
    <string name="img_share_url">Share URL</string>
    <string name="img_share_image">Share image</string>
    <string name="set_score">Set score</string>
</resources>