<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" >

    <group android:id="@+id/menu_group_feeds" >
    </group>
    <group android:id="@+id/menu_group_headlines" >
        <item
            android:id="@+id/search"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/search"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/headlines_mark_as_read"
            app:showAsAction=""
            android:title="@string/headlines_mark_as_read"/>
        <item
            android:id="@+id/headlines_select"
            android:icon="@drawable/baseline_select_all_24"
            app:showAsAction="ifRoom"
            android:title="@string/headlines_select"/>

        <item
            android:id="@+id/headlines_toggle_sort_order"
            android:icon="@drawable/baseline_sort_24"
            app:showAsAction="ifRoom"
            android:title="@string/toggle_sort_order"/>

        <item
            android:id="@+id/headlines_view_mode"
            app:showAsAction=""
            android:title="@string/headlines_view_mode"/>
    </group>
    <group android:id="@+id/menu_group_article" >
        <item
            android:id="@+id/toggle_marked"
            android:icon="@drawable/baseline_star_outline_24"
            app:showAsAction="ifRoom"
            android:title="@string/article_toggle_marked"/>
        <item
            android:id="@+id/toggle_published"
            android:icon="@drawable/baseline_rss_feed_24"
            app:showAsAction="ifRoom"
            android:title="@string/article_toggle_published"/>
        <item
            android:id="@+id/toggle_unread"
            android:icon="@drawable/baseline_email_24"
            app:showAsAction="ifRoom"
            android:title="@string/article_toggle_unread"/>
        <!-- <item
            android:id="@+id/share_article"
            android:icon="@drawable/ic_share"
            app:showAsAction="ifRoom"
            android:title="@string/share_article"/> -->
        <item
            android:id="@+id/catchup_above"
            android:title="@string/article_mark_read_above"/>
    </group>

    <item
        android:id="@+id/preferences"
        app:showAsAction=""
        android:title="@string/preferences"/>

</menu>