<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/article_img_open"
        app:showAsAction=""
        android:title="@string/open_with"/>
    <item
        android:id="@+id/article_img_copy"
        app:showAsAction=""
        app:iconTint="?attr/colorControlNormal"
        android:icon="@drawable/baseline_content_copy_24"
        android:title="@string/article_link_copy"/>
    <item
        android:id="@+id/article_img_share"
        android:icon="@drawable/baseline_share_24"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction=""
        android:title="@string/img_share_image"/>
    <item
        android:id="@+id/article_img_share_url"
        android:icon="@drawable/baseline_share_24"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction=""
        android:title="@string/img_share_url"/>
    <item
        android:id="@+id/article_img_view_caption"
        app:showAsAction=""
        android:title="@string/article_img_view_caption"/>

    <!--
          <item
        android:id="@+id/article_img_save"
        app:showAsAction=""
        android:title="Save image to file"/>
    -->

</menu>